fixed font size and illustrations on mobile

--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -21,8 +21,8 @@ body, html {
 
 @media (max-width: 767px) {
   body, html {
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 16px;
+    line-height: 16px;
     overflow-y: auto;
     overflow-x: hidden;
     background-position: center calc(50% - 2rem);
